# servant

./: cabal.project  stack.yaml  streaming-benchmark.sh
doc/cookbook/basic-streaming/: basic-streaming.cabal
doc/tutorial/: Client.lhs  Server.lhs
servant/: servant.cabal
servant-client/: servant-client.cabal
servant-client-core/src/Servant/Client/Core/Internal/: HasClient.hs  Request.hs
servant-client/src/Servant/Client/Internal/: HttpClient.hs
servant-client/test/Servant/: StreamSpec.hs
servant-conduit/: servant-conduit.cabal
servant-docs/src/Servant/Docs/: Internal.hs
servant-foreign/src/Servant/Foreign/: Internal.hs
servant-foreign/test/Servant/: ForeignSpec.hs
servant-machines/: servant-machines.cabal
servant-pipes/: servant-pipes.cabal
servant-server/src/Servant/Server/: Internal.hs
servant-server/test/Servant/: ServerSpec.hs
servant/src/Servant/: API.hs  Links.hs
servant/src/Servant/API/: Stream.hs
servant/src/Servant/Types/: Codensity.hs  SourceT.hs
